<resources>
    <string name="app_name">MyTestApp</string>
    <string name="select_category">Select Category</string>
    <string name="phones">Phones</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best seller</string>
    <string name="search">Search</string>
    <string name="explorer">Explorer</string>
    <string name="newLabel">New</string>
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="_0_us">$0 us</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="samsung">Samsung</string>
    <string name="iphone">Iphone</string>
    <string name="huawei">Huawei</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>

    <string-array name="brand">
        <item>Samsung</item>
        <item>IPhone</item>
        <item>Huawei</item>
    </string-array>

    <string-array name="size">
        <item>less than 3.4 inches</item>
        <item>3.5 to 4.9 inches</item>
        <item>5.0 to 5.4 inches</item>
        <item>5.4 to 5.9 inches</item>
        <item>6.0 to 6.4 inches</item>
        <item>over 6.5 inches</item>

    </string-array>
</resources>