<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_rectangle_rounded_top_20dp"
    android:backgroundTint="?attr/colorPrimary"
    android:paddingBottom="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="37dp"
            android:layout_height="37dp"
            app:tint="?attr/colorPrimary"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ripple_rounded_rectangle_10dp"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_options"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/closeButton"
            app:layout_constraintEnd_toStartOf="@+id/doneButton"
            app:layout_constraintStart_toEndOf="@+id/closeButton"
            app:layout_constraintTop_toTopOf="@+id/closeButton" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="86dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            android:layout_height="37dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ripple_rounded_rectangle_10dp"
            android:backgroundTint="?attr/colorSecondary"
            android:padding="0dp"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/done"
            app:backgroundTint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/closeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/closeButton" />

        <TextView
            android:id="@+id/brandTextView"
            android:layout_width="wrap_content"
            android:layout_marginTop="46dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            app:layout_constraintStart_toStartOf="@+id/closeButton"
            app:layout_constraintTop_toBottomOf="@+id/closeButton" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:clipChildren="true"
            android:theme="@style/SpinnerTheme"
            android:dropDownWidth="match_parent"
            app:barrierDirection="top"

            android:id="@+id/brandSelector"
            android:popupBackground="@drawable/background_spinner_popup"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/background_spinner_main"
            android:entries="@array/brand"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/brandTextView"
            app:layout_constraintTop_toBottomOf="@+id/brandTextView"

            />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/closeButton"
            app:layout_constraintTop_toBottomOf="@+id/brandSelector" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:clipChildren="true"
            android:theme="@style/SpinnerTheme"
            android:id="@+id/priceSelector"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="31dp"
            android:gravity="center"
            android:padding="0dp"
            android:background="@drawable/background_spinner_popup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/priceTextView"
            app:layout_constraintTop_toBottomOf="@+id/priceTextView"
            >

                <TextView
                    android:background="@null"
                    android:id="@+id/priceEditableText"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:text="$0.00"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/priceSeekBar"
                    android:layout_width="0dp"
                    android:max="10"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/priceEditableText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/closeButton"
            app:layout_constraintTop_toBottomOf="@+id/priceSelector" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sizeSelector"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="31dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_spinner_main"
            android:clipChildren="true"
            android:layout_marginBottom="16dp"
            android:dropDownWidth="match_parent"
            android:entries="@array/size"
            android:popupBackground="@drawable/background_spinner_popup"
            android:spinnerMode="dropdown"
            android:theme="@style/SpinnerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/brandTextView"
            app:layout_constraintTop_toBottomOf="@+id/sizeTextView"

            />

</androidx.constraintlayout.widget.ConstraintLayout>
